# axum-ddd-rust

./: .env.dist  .env.mysql.dist  .env.tidb.dist  .gitattributes  .gitignore  Cargo.toml  DB.md  MEMO.md  Makefile  README.md  SERVER.md  compose.mysql.yml  compose.tidb.yml  compose.yml  index.html  index.js  index.ts  main.js  run.sh  test.sh  watch.sh
.claude/: settings.local.json
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
.github/: dependabot.yml
.github/workflows/: auto_merge.yml  rust.yml
Docker/db/: clean_up.sql  drop_table.sql  init.sql
Docker/mysql/: Dockerfile  init.sql
Docker/server/: Dockerfile
Docker/tidb/: Dockerfile  init.sql
sample2/: index.html  main.js  style.css
sample3/: index.html  main.js  style.css
sql/: check.sql  clean_up.sql
src/: domain.rs  handler.rs  infrastructure.rs  main.rs  usecase.rs
src/config/: connect.rs
src/crates/domain/: Cargo.toml
src/crates/domain/src/: interface.rs  lib.rs
src/crates/domain/src/aggregate/: circle.rs  member.rs
src/crates/domain/src/aggregate/value_object/: circle_id.rs  grade.rs  member_id.rs
src/crates/domain/src/interface/: circle_duplicate_checker_interface.rs  circle_repository_interface.rs
src/crates/infrastructure/: Cargo.toml  README.md
src/crates/infrastructure/src/: circle_duplicate_checker.rs  circle_repository.rs  circle_repository_with_my_sql.rs  db_data.rs  lib.rs  mysql.rs  on_memory_db.rs
src/crates/infrastructure/src/db_data/: circle_data.rs  member_data.rs
src/crates/infrastructure/src/db_schema/: circle_data.rs  member_data.rs
src/crates/infrastructure/src/in_memory_db/: circle_duplicate_checker.rs  circle_repository.rs
src/crates/infrastructure/src/mysql/: circle_duplicate_checker.rs  circle_repository.rs  test_utils.rs
src/crates/infrastructure/src/on_memory_db/: circle_duplicate_checker.rs  circle_repository.rs
src/crates/main/: Cargo.toml
src/crates/main/src/: app.rs  handler.rs  lib.rs
src/crates/main/src/config/: connect.rs
src/crates/usecase/: Cargo.toml
src/crates/usecase/src/: create_circle.rs  fetch_all_circle.rs  fetch_circle.rs  lib.rs  update_circle.rs
src/domain/: aggregate.rs  interface.rs  port.rs  repository.rs
src/domain/aggregate/: circle.rs  member.rs  value_object.rs
src/domain/aggregate/value_object/: circle_id.rs  grade.rs  major.rs  member_id.rs
src/domain/interface/: circle_repository_interface.rs
src/domain/port/: circle_repository_port.rs
src/domain/repository/: circle_repository_trait.rs
src/infrastructure/: circle_repository.rs  circle_repository_with_my_sql.rs  db.rs
src/infrastructure/db_data/: circle_data.rs  member_data.rs
src/usecase/: create_circle.rs  fetch_circle.rs  update_circle.rs
src/usecase/input/: create_circle.rs  fetch_circle.rs
src/usecase/param/: create_circle.rs  fetch_circle.rs  update_circle.rs
