workspace = { members = [
    "src/crates/infrastructure",
    "src/crates/domain",
    "src/crates/usecase",
] }
[package]
name = "app"
version = "0.1.0-rc.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.86"
sqlx = { version = "0.7.3", features = ["mysql", "runtime-tokio-native-tls"] }
dotenv = "0.15.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "std",
    "env-filter",
    "fmt",
] }
domain = { path = "./src/crates/domain" }
usecase = { path = "./src/crates/usecase" }
infrastructure = { path = "./src/crates/infrastructure" }
[dev-dependencies]
tower = { version = "0.4.13", features = ["util"] }
