[workspace]
members = [
    "src/crates/infrastructure",
    "src/crates/domain",
    "src/crates/usecase",
]
[package]
name = "app"
version = "0.1.0-rc.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
axum = { version = "0.7.9", features = ["macros"] }
dotenv = "0.15.0"
serde.workspace = true
serde_json = "1"
sqlx.workspace = true
tokio.workspace = true
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "std",
    "env-filter",
    "fmt",
] }
domain = { path = "./src/crates/domain" }
usecase = { path = "./src/crates/usecase" }
infrastructure = { path = "./src/crates/infrastructure" }

[workspace.dependencies]
anyhow = "1.0.93"
async-trait = "0.1.83"
mockall = "0.13.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.2", features = ["mysql", "runtime-tokio-native-tls"] }

[dev-dependencies]
tower = { version = "0.5.1", features = ["util"] }
