[workspace]
members = [
    "src/crates/infrastructure",
    "src/crates/domain",
    "src/crates/usecase",
    "src/crates/main",
]
[package]
name = "app"
version = "0.1.0-rc.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[bin]]
# name = "main"
# path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
dotenv.workspace = true
serde.workspace = true
serde_json = "1"
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

domain = { path = "./src/crates/domain" }
usecase = { path = "./src/crates/usecase" }
infrastructure = { path = "./src/crates/infrastructure" }
main = { path = "./src/crates/main" }

[workspace.dependencies]
axum = { version = "0.8.4", features = ["macros"] }
anyhow = "1.0.99"
async-trait = "0.1.89"
mockall = "0.13.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio-native-tls"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "std",
    "env-filter",
    "fmt",
] }
tower = { version = "0.5.2", features = ["util"] }
dotenv = "0.15.0"

[dev-dependencies]
tower.workspace = true
