[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.89"
sqlx = { version = "0.8.2", features = ["mysql", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
async-trait = "0.1.83"
domain = { path = "../domain" }
