[package]
name = "main"
version = "0.1.1"
edition = "2021"

[dependencies]
usecase = { path = "../usecase" }
infrastructure = { path = "../infrastructure" }
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
tower.workspace = true
anyhow.workspace = true
sqlx.workspace = true
dotenv.workspace = true

[dev-dependencies]
domain = { path = "../domain" }