[package]
name = "usecase"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.89"
mockall = "0.13.0"
domain = { path = "../domain" }
tokio = { version = "1.40.0", features = ["full"] }
